2004-04-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/scaled-font-metric.cc (derived_mark): idem.

	* scm/encoding.scm (make-encoding-mapping): change permutation to mapping.

	* lily/scaled-font-metric.cc (derived_mark): is a const method.
	(Modified_font_metric): make alist for coding_description_
	(LY_DEFINE): remove coding-name.

	* scm/output-tex.scm (text): remove debugging code.

	* lily/scaled-font-metric.cc (ly_font_encoding): return vector

	* buildscripts/mf-to-table.py (parse_logfile): read EncodingScheme
	from infile.

	* mf/feta-generic.mf: move fet_beginfont into generic code.
	use fetaMusic (without space) as encoding

	* mf/feta-autometric.mf: take encoding argument

	* lily/afm.cc (read_afm_file): bugfix, read global info too. 

	* lily/my-lily-lexer.cc (set_identifier): remove gh_scm2newstr
	use.

	* scm/encoding.scm (read-encoding-file): use symbol for glyph
	name.

2004-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/title-markup.ly: Set inputencoding.

	* scm/output-ps.scm (define-fonts): Handle font re-encoding.

	* lily/scaled-font-metric.cc (ly:font-coding-name): New function.

	* scm/encoding.scm (get-coding-filename, get-coding-command): New
	function.
	(coding-alist): Also hold filename, command.
	(read-encoding-file): Return symbols.

2004-04-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/output-tex.scm: remove fontify; text and char take a font
	argument.

	* lily/tfm.cc (name_to_index): new function, use encoding_table_.

	* lily/scaled-font-metric.cc (text_dimension): init
	coding_{permutation,table}_ too 
	(LY_DEFINE): ly:font-encoding, new function return

	* lily/paper-def.cc (find_scaled_font): take input coding from
	inputcoding paper var.

	* lily/performance.cc (output): remap modulo 16.

	* lily/text-item.cc (interpret_markup): whoops, variable
	shadowing fixed.

2004-04-06  Michael Welsh Duggan  <mwd@sei.cmu.edu>

	* lily/piano-pedal-performer.cc (try_music): Compare symbols to